--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="dist/css/style.css" />
-    <title>Landing Page #1 | Ngoding Mastery</title>
+    <title>Desa Rejosari</title>
   </head>
   <body>
     <header>
