--- a/index.html
+++ b/index.html
@@ -1,175 +1,164 @@
 <!DOCTYPE html>
 <html lang="en" id="home">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Font Poppins -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet" />
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="dist/css/style.css" />
-    <title>Desa Rejosari</title>
-  </head>
-  <body>
-    <header>
-      <div class="navbar">
-        <div class="container">
-          <div class="box-navbar">
-            <div class="logo">
-              <h1>Desa Rejosari</h1>
-            </div>
-            <ul class="menu">
-              <li><a href="#home">Home</a></li>
-              <li><a href="#services">Services</a></li>
-              <li><a href="#Wisata">Wisata</a></li>
-              <li class="active"><a href="#daftar">Daftar</a></li>
-            </ul>
-            <i class="fa-solid fa-bars menu-bar"></i>
-          </div>
-        </div>
-      </div>
+  <!-- Font Poppins -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
+    rel="stylesheet" />
 
-      <div class="hero">
-        <div class="container">
-          <div class="box-hero">
-            <div class="box">
-              <h1>
-                Wisata Pilihan Terbaik <br />
-                Liburan Bersama Keluarga
-              </h1>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, autem?</p>
-              <button>Selengkapnya</button>
-            </div>
-            <div class="box">
-              <img src="assets/img/Hero.png" alt="" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
+  <!-- CSS -->
+  <link rel="stylesheet" href="dist/css/style.css" />
+  <title>Desa Rejosari</title>
+</head>
 
-    <!-- Services -->
-    <div class="services" id="services">
+<body>
+  <header>
+    <div class="navbar">
       <div class="container">
-        <div class="box-services">
+        <div class="box-navbar">
+          <div class="logo">
+            <h1>Desa Rejosari</h1>
+          </div>
+          <ul class="menu">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#Wisata">Wisata</a></li>
+            <li><a href="#daftar">Daftar</a></li>
+          </ul>
+          <i class="fa-solid fa-bars menu-bar"></i>
+        </div>
+      </div>
+    </div>
+
+    <div class="hero">
+      <div class="container">
+        <div class="box-hero">
           <div class="box">
-            <i class="fa-solid fa-coins"></i>
-            <h4>Harga Terjangkau</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, labore.</p>
+            <h1>
+              Wisata Pilihan Terbaik <br />
+              Liburan Bersama Keluarga
+            </h1>
+            <p>Jika anda sedang mengunjungi atau mencari suasana baru di sekitar Kabupaten Magelang, Jawa Tengah, dan
+              dari banyak tempat yang bagus untuk bersantai dengan keluarga itu terasa membosankan, anda bisa mencari
+              wisata baru yang bukan sekedar mendapat keuntungan di bidang "wisatanya" saja tapi juga bisa mendapatkan
+              keuntungan di bidang lain seperti edukasi sehingga ketika sedang berwisata bukan hanya mendapatkan satu
+              keuntungan saja, seperti desa wisata Rejosari yang berada di kecamatan Bandongan Kabupaten Magelang, Jawa
+              Tengah ini memiliki beberapa tempat yang bisa dijadikan objek wisata anda, walaupun beberapa objek wisata
+              sedang dalam proses pembangunan, tapi tidak kalah menarik dengan wisata wisata lain.</p>
           </div>
           <div class="box">
-            <i class="fa-solid fa-certificate"></i>
-            <h4>Sudah Tersertifikasi</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, labore.</p>
-          </div>
-          <div class="box">
-            <i class="fa-solid fa-people-roof"></i>
-            <h4>Aman dan Ramah</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, labore.</p>
+            <img src="assets/img/Hero.png" alt="" />
           </div>
         </div>
       </div>
     </div>
-    <!-- Services -->
+  </header>
 
-    <!-- Wisata -->
-    <div class="Wisata" id="Wisata">
-      <div class="container">
-        <div class="box-Wisata">
-          <div class="box">
-            <img src="assets/img/Wisata1.jpg" alt="" />
-            <h3>Destinasi Wisata 1</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde, modi.</p>
-            <button>Detail</button>
-          </div>
-          <div class="box">
-            <img src="assets/img/Wisata2.jpg" alt="" />
-            <h3>Destinasi Wisata 2</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde, modi.</p>
-            <button>Detail</button>
-          </div>
-          <div class="box">
-            <img src="assets/img/Wisata3.jpg" alt="" />
-            <h3>Destinasi Wisata 3</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde, modi.</p>
-            <button>Detail</button>
-          </div>
-          <div class="box">
-            <img src="assets/img/Wisata4.jpg" alt="" />
-            <h3>Destinasi Wisata 4</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde, modi.</p>
-            <button>Detail</button>
-          </div>
-          <div class="box">
-            <img src="assets/img/Wisata5.jpg" alt="" />
-            <h3>Destinasi Wisata 5</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde, modi.</p>
-            <button>Detail</button>
-          </div>
-          <div class="box">
-            <img src="assets/img/Wisata6.jpg" alt="" />
-            <h3>Destinasi Wisata 6</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde, modi.</p>
-            <button>Detail</button>
-          </div>
+  <!-- Services -->
+  <div class="services" id="services">
+    <div class="container">
+      <div class="box-services">
+        <div class="box" onclick="toggleActive(this)">
+          <i class="fa-solid fa-coins"></i>
+          <h4>Harga Terjangkau</h4>
+          <p>Kenikmatan liburan berkualitas tinggi tidak harus mahal. Kami menawarkan harga terjangkau untuk semua paket wisata kami, sehingga Anda dapat menikmati liburan tanpa khawatir menguras dompet.</p>
+        </div>
+        <div class="box" onclick="toggleActive(this)">
+          <i class="fa-solid fa-certificate"></i>
+          <h4>Sudah Tersertifikasi</h4>
+          <p>Kami bangga memiliki sertifikasi resmi yang mengakui layanan wisata kami. Dengan demikian, Anda dapat merasa yakin bahwa liburan Anda akan diatur oleh para profesional berpengalaman dan berkualitas.</p>
+        </div>
+        <div class="box" onclick="toggleActive(this)">
+          <i class="fa-solid fa-people-roof"></i>
+          <h4>Aman dan Ramah</h4>
+          <p>Kenyamanan dan keamanan Anda adalah prioritas kami. Tim kami selalu siap memberikan pelayanan yang ramah dan membantu, memastikan bahwa setiap aspek dari perjalanan wisata Anda berjalan dengan lancar.</p>
         </div>
       </div>
     </div>
-    <!-- Wisata -->
+  </div>
+  <!-- Services -->
 
-    <!-- Daftar -->
-    <div class="daftar" id="daftar">
-      <div class="container">
-        <div class="box-daftar">
-          <h1>
-            Ingin Berlibur? <br />
-            Segera Daftarkan Keluarga Anda!
-          </h1>
-          <h3>Klik Link di Bawah Ini!</h3>
-          <button><i class="fa-brands fa-whatsapp"></i> Whatsapp</button>
-          <button><i class="fa-regular fa-envelope"></i> Gmail</button>
-          <button><i class="fa-regular fa-clipboard"></i> Google Form</button>
+  <!-- Wisata -->
+  <div class="Wisata" id="Wisata">
+    <div class="container">
+      <div class="box-Wisata">
+        <div class="box">
+          <img src="assets/img/Wisata1.jpg" alt="" />
+          <h3>Peternakan Kambing</h3>
+          <p>Ketika anda bersama keluarga anda berkunjung ke daerah Bandongan tepatnya desa
+            wisata Rejosari, anda bisa mengunjungi wisata peternakan kambing, disini anda diajak untuk berwisata sambil
+            melihat hewan ternak yang ada di desa wisata Rejosari, adapun untuk hewan yang di ternak di kandang seluas
+            8x16 meter ini adalah hewan jenis Domba, dan untuk informasi, untuk kondisi kandangnya sementara masih dalam
+            proses pembangunan yang nantinya kandang dan fasilitas kandang akan disediakan pemerintah desa, dan dikelola
+            oleh Badan Usaha Milik Desa (BUMDES).
+          </p>
+        </div>
+        <div class="box">
+          <img src="assets/img/Wisata2.jpg" alt="" />
+          <h3>Gumuk Setri</h3>
+          <p>Wisata Gumuk Setri, wisata Gumuk Setri ini adalah wisata religi karena
+            menurut kepercayaan warga desa Rejosari bahwa wisata Gumuk Setri ini disebutkan sebagai tempat persemayaman
+            putri dan terkenal dengan mitos Golek Kencono sebagai penjaga Gumuk Setri, namun bagi anda yang mau
+            berkunjung tidak perlu takut, karena penting bisa menjaga diri dari hal hal yang tidak baik, maka
+            kemungkinan besar tetap aman</p>
+        </div>
+        <div class="box">
+          <img src="assets/img/Wisata3.jpg" alt="" />
+          <h3>Destinasi Wisata 3</h3>
+          <p>Ketika anda bersama keluarga anda berkunjung di daerah Bandongan tepatnya di desa
+            wisata Rejosari, anda bisa mengunjungi pasar Gajian, yaitu pasar milik desa Rejosari dan merupakan tempat
+            terdekat dari kantor desa Rejosari dan jalan raya, jadi anda tidak perlu langsung ke objek wisata yang
+            jaraknya jauh lebih dulu, namun anda bisa berkunjung ke pasar Gajian untuk istirahat maupun belanja, adapun
+            beberapa barang dagangan yang dijual adalah seperti sayur sayuran, buah, bahkan jamu, dan ada juga penjual
+            oleh oleh khas Magelang</p>
         </div>
       </div>
     </div>
-    <!-- Daftar -->
+  </div>
+  <!-- Wisata -->
 
-    <!-- Footer -->
-    <div class="footer">
-      <div class="container">
-        <div class="box-footer">
-          <div class="box">
-            <h2>Desa Rejosari</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam eius rerum quisquam perspiciatis obcaecati, quasi temporibus aperiam iusto aliquam doloremque.</p>
-          </div>
-          <div class="box">
-            <h3>Menu</h3>
-            <a href="#home">Home</a>
-            <a href="#services">Services</a>
-            <a href="#Wisata">Wisata</a>
-            <a href="#daftar">Daftar</a>
-          </div>
-          <div class="box">
-            <p>&copy; Copyright by <span>PPMT Rejosari</span> All Rights Reserved 2023, Indonesia</p>
-          </div>
+  <!-- Daftar -->
+  <div class="daftar" id="daftar">
+    <div class="container">
+      <div class="box-daftar">
+        <h1>
+          Ingin Berlibur? <br />
+          Segera Daftarkan Keluarga Anda!
+        </h1>
+        <h3>Klik Link di Bawah Ini!</h3>
+        <button><i class="fa-brands fa-whatsapp"></i> Whatsapp</button>
+        <button><i class="fa-regular fa-envelope"></i> Gmail</button>
+        <button><i class="fa-regular fa-clipboard"></i> Google Form</button>
+      </div>
+    </div>
+  </div>
+  <!-- Daftar -->
+
+  <!-- Footer -->
+  <div class="footer">
+    <div class="container">
+      <div class="box-footer">
+        <div class="box">
+        </div>
+        <div class="box">
+          <p>&copy; Copyright by <span>PPMT UNIMMA Rejosari</span> All Rights Reserved 2023, Indonesia</p>
         </div>
       </div>
     </div>
-    <!-- Footer -->
+  </div>
+  <!-- Footer -->
 
-    <script src="dist/js/script.js"></script>
-  </body>
+  <script src="dist/js/script.js"></script>
+</body>
 </html>
