--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="dist/css/style.css" />
-  <title>Desa Rejosari</title>
+  <title>Coffee Time</title>
 </head>
 
 <body>
@@ -28,13 +28,13 @@
       <div class="container">
         <div class="box-navbar">
           <div class="logo">
-            <h1>Desa Rejosari</h1>
+            <h1>Coffee Time</h1>
           </div>
           <ul class="menu">
             <li><a href="#home">Home</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#Wisata">Wisata</a></li>
-            <li><a href="#daftar">Daftar</a></li>
+            <li><a href="#CoffeeSelection">Coffee Selection</a></li>
+            <li><a href="#reservation">Reservation</a></li>
           </ul>
           <i class="fa-solid fa-bars menu-bar"></i>
         </div>
@@ -46,19 +46,13 @@
         <div class="box-hero">
           <div class="box">
             <h1>
-              Wisata Pilihan Terbaik <br />
-              Liburan Bersama Keluarga
+              Nikmati Kelezatan Kopi <br />
+              di Coffee Time
             </h1>
-            <p>Jika anda sedang mengunjungi atau mencari suasana baru di sekitar Kabupaten Magelang, Jawa Tengah, dan
-              dari banyak tempat yang bagus untuk bersantai dengan keluarga itu terasa membosankan, anda bisa mencari
-              wisata baru yang bukan sekedar mendapat keuntungan di bidang "wisatanya" saja tapi juga bisa mendapatkan
-              keuntungan di bidang lain seperti edukasi sehingga ketika sedang berwisata bukan hanya mendapatkan satu
-              keuntungan saja, seperti desa wisata Rejosari yang berada di kecamatan Bandongan Kabupaten Magelang, Jawa
-              Tengah ini memiliki beberapa tempat yang bisa dijadikan objek wisata anda, walaupun beberapa objek wisata
-              sedang dalam proses pembangunan, tapi tidak kalah menarik dengan wisata wisata lain.</p>
+            <p>Temukan pengalaman kopi terbaik dengan berbagai varian kopi berkualitas tinggi.</p>
           </div>
           <div class="box">
-            <img src="assets/img/Hero.png" alt="" />
+            <img src="assets/img/Hero.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -71,79 +65,68 @@
       <div class="box-services">
         <div class="box" onclick="toggleActive(this)">
           <i class="fa-solid fa-coins"></i>
-          <h4>Harga Terjangkau</h4>
-          <p>Kenikmatan liburan berkualitas tinggi tidak harus mahal. Kami menawarkan harga terjangkau untuk semua paket wisata kami, sehingga Anda dapat menikmati liburan tanpa khawatir menguras dompet.</p>
+          <h4>Varian Kopi Berkualitas</h4>
+          <p>Nikmati kelezatan kopi dengan berbagai varian berkualitas tinggi di Coffee Time.</p>
         </div>
         <div class="box" onclick="toggleActive(this)">
           <i class="fa-solid fa-certificate"></i>
-          <h4>Sudah Tersertifikasi</h4>
-          <p>Kami bangga memiliki sertifikasi resmi yang mengakui layanan wisata kami. Dengan demikian, Anda dapat merasa yakin bahwa liburan Anda akan diatur oleh para profesional berpengalaman dan berkualitas.</p>
+          <h4>Kopi Premium</h4>
+          <p>Kami menyajikan kopi premium yang dijamin kualitasnya untuk pengalaman kopi terbaik Anda.</p>
         </div>
         <div class="box" onclick="toggleActive(this)">
           <i class="fa-solid fa-people-roof"></i>
-          <h4>Aman dan Ramah</h4>
-          <p>Kenyamanan dan keamanan Anda adalah prioritas kami. Tim kami selalu siap memberikan pelayanan yang ramah dan membantu, memastikan bahwa setiap aspek dari perjalanan wisata Anda berjalan dengan lancar.</p>
+          <h4>Atmosfer Nyaman</h4>
+          <p>Nikmati kopi Anda dalam suasana yang nyaman dan ramah di Coffee Time.</p>
         </div>
       </div>
     </div>
   </div>
   <!-- Services -->
 
-  <!-- Wisata -->
-  <div class="Wisata" id="Wisata">
+  <!-- Coffee Selection -->
+  <div class="coffe" id="CoffeeSelection">
     <div class="container">
-      <div class="box-Wisata">
+      <div class="box-coffe">
         <div class="box">
-          <img src="assets/img/Wisata1.jpg" alt="" />
-          <h3>Peternakan Kambing</h3>
-          <p>Ketika anda bersama keluarga anda berkunjung ke daerah Bandongan tepatnya desa
-            wisata Rejosari, anda bisa mengunjungi wisata peternakan kambing, disini anda diajak untuk berwisata sambil
-            melihat hewan ternak yang ada di desa wisata Rejosari, adapun untuk hewan yang di ternak di kandang seluas
-            8x16 meter ini adalah hewan jenis Domba, dan untuk informasi, untuk kondisi kandangnya sementara masih dalam
-            proses pembangunan yang nantinya kandang dan fasilitas kandang akan disediakan pemerintah desa, dan dikelola
-            oleh Badan Usaha Milik Desa (BUMDES).
-          </p>
+          <img src="assets/img/arabica.jpg" alt="" />
+          <h3>Kopi Arabika</h3>
+          <p>Rasakan keharuman dan kelezatan kopi Arabika pilihan terbaik dari Coffee Time.</p>
         </div>
         <div class="box">
-          <img src="assets/img/Wisata2.jpg" alt="" />
-          <h3>Gumuk Setri</h3>
-          <p>Wisata Gumuk Setri, wisata Gumuk Setri ini adalah wisata religi karena
-            menurut kepercayaan warga desa Rejosari bahwa wisata Gumuk Setri ini disebutkan sebagai tempat persemayaman
-            putri dan terkenal dengan mitos Golek Kencono sebagai penjaga Gumuk Setri, namun bagi anda yang mau
-            berkunjung tidak perlu takut, karena penting bisa menjaga diri dari hal hal yang tidak baik, maka
-            kemungkinan besar tetap aman</p>
+          <img src="assets/img/robusta.jpg" alt="" />
+          <h3>Kopi Robusta</h3>
+          <p>Temukan kekuatan rasa kopi Robusta yang unik di Coffee Time.</p>
         </div>
         <div class="box">
-          <img src="assets/img/Wisata3.jpg" alt="" />
-          <h3>Destinasi Wisata 3</h3>
-          <p>Ketika anda bersama keluarga anda berkunjung di daerah Bandongan tepatnya di desa
-            wisata Rejosari, anda bisa mengunjungi pasar Gajian, yaitu pasar milik desa Rejosari dan merupakan tempat
-            terdekat dari kantor desa Rejosari dan jalan raya, jadi anda tidak perlu langsung ke objek wisata yang
-            jaraknya jauh lebih dulu, namun anda bisa berkunjung ke pasar Gajian untuk istirahat maupun belanja, adapun
-            beberapa barang dagangan yang dijual adalah seperti sayur sayuran, buah, bahkan jamu, dan ada juga penjual
-            oleh oleh khas Magelang</p>
+          <img src="assets/img/spesial.jpg" alt="" />
+          <h3>Kopi Special Blend</h3>
+          <p>Nikmati keistimewaan rasa kopi dari campuran khusus Coffee Time.</p>
         </div>
       </div>
     </div>
   </div>
-  <!-- Wisata -->
+  <!-- Coffee Selection -->
 
-  <!-- Daftar -->
-  <div class="daftar" id="daftar">
+  <!-- Reservation -->
+  <div class="daftar" id="reservation">
     <div class="container">
       <div class="box-daftar">
         <h1>
-          Ingin Berlibur? <br />
-          Segera Daftarkan Keluarga Anda!
+          Ingin Menikmati Kopi Terbaik? <br />
+          Segera Kunjungi Coffee Time!
         </h1>
-        <h3>Klik Link di Bawah Ini!</h3>
-        <button><i class="fa-brands fa-whatsapp"></i> Whatsapp</button>
-        <button><i class="fa-regular fa-envelope"></i> Gmail</button>
-        <button><i class="fa-regular fa-clipboard"></i> Google Form</button>
+        <h3>Klik Link di Bawah Ini untuk Reservasi:</h3>
+        <a href="https://api.whatsapp.com/send?phone=6283854566509" target="_blank">
+          <button><i class="fa-brands fa-whatsapp"></i> Whatsapp</button>
+        </a>
+        <a href="mailto:mretadwlestari@gmail.com">
+          <button><i class="fa-regular fa-envelope"></i> Email</button>
+        </a>
+        <button><i class="fa-regular fa-clipboard"></i> Reservasi Online</button>
       </div>
     </div>
   </div>
-  <!-- Daftar -->
+  <!-- Reservation -->
 
   <!-- Footer -->
   <div class="footer">
@@ -152,7 +135,8 @@
         <div class="box">
         </div>
         <div class="box">
-          <p>&copy; Copyright by <span>PPMT UNIMMA Rejosari</span> All Rights Reserved 2023, Indonesia</p>
+          <p>&copy; Copyright by <span>Coffee Time</span> All Rights Reserved 2024</p>
+          <p>Oktavia Cahya Sonda <span>2242620027</span></p>
         </div>
       </div>
     </div>
@@ -161,4 +145,5 @@
 
   <script src="dist/js/script.js"></script>
 </body>
-</html>
+
+</html> 
