--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           Segera Kunjungi Coffee Time!
         </h1>
         <h3>Klik Link di Bawah Ini untuk Reservasi:</h3>
-        <a href="https://api.whatsapp.com/send?phone=6283854566509" target="_blank">
+        <a href="#" target="_blank">
           <button><i class="fa-brands fa-whatsapp"></i> Whatsapp</button>
         </a>
         <a href="mailto:mretadwlestari@gmail.com">
@@ -136,7 +136,7 @@
         </div>
         <div class="box">
           <p>&copy; Copyright by <span>Coffee Time</span> All Rights Reserved 2024</p>
-          <p>Oktavia Cahya Sonda <span>2242620027</span></p>
+          <p>Herdin Afianto RAW<span>045074308</span></p>
         </div>
       </div>
     </div>
