--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p>Temukan pengalaman kopi terbaik dengan berbagai varian kopi berkualitas tinggi.</p>
           </div>
           <div class="box">
-            <img src="assets/img/Hero.jpg" alt="" />
+            <img src="img/Hero.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -88,17 +88,17 @@
     <div class="container">
       <div class="box-coffe">
         <div class="box">
-          <img src="assets/img/arabica.jpg" alt="" />
+          <img src="img/arabica.jpg" alt="" />
           <h3>Kopi Arabika</h3>
           <p>Rasakan keharuman dan kelezatan kopi Arabika pilihan terbaik dari Coffee Time.</p>
         </div>
         <div class="box">
-          <img src="assets/img/robusta.jpg" alt="" />
+          <img src="img/robusta.jpg" alt="" />
           <h3>Kopi Robusta</h3>
           <p>Temukan kekuatan rasa kopi Robusta yang unik di Coffee Time.</p>
         </div>
         <div class="box">
-          <img src="assets/img/spesial.jpg" alt="" />
+          <img src="img/spesial.jpg" alt="" />
           <h3>Kopi Special Blend</h3>
           <p>Nikmati keistimewaan rasa kopi dari campuran khusus Coffee Time.</p>
         </div>
