--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p>Temukan pengalaman kopi terbaik dengan berbagai varian kopi berkualitas tinggi.</p>
           </div>
           <div class="box">
-            <img src="img/Hero.jpg" alt="" />
+            <img src="img/Hero.png" alt="" />
           </div>
         </div>
       </div>
